# abatchtaskpool

./: .gitignore  Cargo.toml  README.md  go.mod  setup.py
abatchtaskpool/: async_batch_engine.go  async_batch_engine.py  async_batch_engine_test.go  batch_worker.go  example_processing_function.go
batch_engine/: Cargo.toml
batch_engine/src/: main.rs
examples/: demo.rs  example.rs
pytest/: test_async_batch_engine.py
src/: lib.rs  main.rs
test/: test_async_batch_engine.py
tests/: batch.rs
