[package]
name = "abatchtaskpool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "example"
path = "examples/example.rs"
